Done the map shit!!!

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <body>
     <div id="backdrop-hook"></div>
 
+    <!--    /*TEMP */ -->
+  
+    <div id="modal-hook"></div>
+    <div id="drawer-hook"></div>
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
