--- a/index.html
+++ b/index.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- MAP SHIT-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css"
-      type="text/css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/ol@latest/dist/ol.js"></script>
-
-  </head>
-  <body>
-    <div id="backdrop-hook"></div>
-
-    <!--    /*TEMP */ -->
-
-    <div id="modal-hook"></div>
-    <div id="drawer-hook"></div>
-    <div id="root"></div>
-
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css" type="text/css" />
+  <script src="https://cdn.jsdelivr.net/npm/ol@latest/dist/ol.js" defer></script>
+</head>
+<body>
+  <div id="backdrop-hook"></div>
+  <!-- TEMP -->
+  <div id="modal-hook"></div>
+  <div id="drawer-hook"></div>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
